# Rust-Image-Editor

./: .gitignore  Cargo.toml  README.md  build.rs
core_cpp/: CMakeLists.txt  Contrast_Brightness.cpp  Contrast_Brightness.h  IO.cpp  IO.h  blur.h  crop.cpp  crop.h  draw_shapes.cpp  draw_shapes.h  laplace.cpp  laplace.h  library.cpp  library.h
src/: blur.rs  brightness.rs  brightness_contrast.rs  builder_basics.glade  builder_basics.glade~  canny.rs  contrast.rs  crop.rs  image_editor.rs  io.rs  laplace.rs  main.rs  matrix.rs  module.rs  shapes.rs
tests/: test_io.rs
tests/cpp/: CMakeLists.txt  main.cpp
