[package]
name = "Rust-Image-Editor"
version = "0.1.0"
authors = ["Lyuboslav Karev <lyubo.karev@gmail.com>"]
edition = "2018"
build="build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1.31"

[dependencies]
libc="*"
sha-1="*"
gdk-pixbuf = "0.8.0"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

